tests/baselines/reference/genericClassesInModule2(strict=true).errors.txt
genericClassesInModule2.ts(13,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.


==== genericClassesInModule2.ts (1 errors) ====
    export class A<T1>{
        constructor( public callback: (self: A<T1>) => void) {
            var child = new B(this);
        }
        AAA( callback: (self: A<T1>) => void) {
            var child = new B(this);
        }
    }
    
    export interface C<T1>{
        child: B<T1>;
        (self: C<T1>): void;
        new(callback: (self: C<T1>) => void)
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    export class B<T2> {
        constructor(public parent: T2) { }
    }
    
    